# bazel-js

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
src/@org/add-one/: BUILD.bazel  index.test.ts  jest.config.mjs  package.json
src/@org/add-two/: BUILD.bazel  index.js  index.test.ts  index.ts  package.json
src/esbuild-entrypoint-browser-field-false/: .gitignore  BUILD.bazel  README.md  build.js  entrypoint.ts
src/esbuild-entrypoint-copy-collision/: BUILD.bazel  entrypoint.ts
src/multiple-graphql/: BUILD.bazel  README.md  new.graphql  old.graphql  package.json
src/service-a/: BUILD.bazel  index.mjs  index.test.ts  index.ts  package.json
src/service-a/feature-a/: BUILD.bazel  index.test.ts  index.ts
src/service-a/src/feature-a/: BUILD.bazel  index.test.ts  index.ts
tooling/jest/: BUILD.bazel  jest-env.ts  jest.config.mjs
tooling/js/: defs.bzl
