load("@aspect_rules_esbuild//esbuild:defs.bzl", "esbuild")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "entrypoint_library",
		srcs = ["entrypoint.ts"],
		declaration = True,
		transpiler = "tsc",
		tsconfig = {},
    deps = [
      "//:node_modules/@loaders.gl/worker-utils",
    ],
)

esbuild(
    name = "lib_failure",
    deps = [":entrypoint_library"],
    entry_point = "entrypoint.js",
    platform = "browser",
    format = "esm",
    target = "es2020",
)

esbuild(
    name = "lib_success",
    deps = [":entrypoint_library"],
    entry_point = "entrypoint.js",
    platform = "browser",
    format = "esm",
    target = "es2020",
    bazel_sandbox_plugin = False,
)
