load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tooling/js:defs.bzl", "js_monorepo_binary")

npm_link_all_packages()

js_monorepo_binary(
    name = "service-a",
    data = [
        "//src/@org/add-one:library",
        "//src/@org/add-two:library",
    ],
    entry_point = "index.mjs",
)
