load("@npm//:defs.bzl", "npm_link_all_packages")
load("//tooling/js:defs.bzl", "ts_library")

npm_link_all_packages()

ts_library(
    name = "library",
    srcs = [
      "index.ts",
    ],
    deps = [
      "//src/service-a/feature-a:library",
      ":node_modules/@org/add-one",
      ":node_modules/@org/add-two",
    ]
)
