load("//tooling/js:defs.bzl", "ts_library", "ts_test", "ts_workspace")

ts_library(
    name = "library",
    srcs = [
      "index.ts",
    ],
    deps = [
      "//src/service-a/feature-a:library",
      ":node_modules/@org/add-one",
      ":node_modules/@org/add-two",
    ]
)

ts_test(
    name = "test",
    embed = [":library"],
    test = "index.test.ts",
)

ts_workspace(
    srcs = [":library"],
    visibility = ["//visibility:private"],
)
