load("@aspect_rules_js//js:defs.bzl", "js_library")
load("//tooling/js:defs.bzl", "ts_library")

ts_library(
  name = "jest_env",
  srcs = [
		"jest-env.ts",
  ],
  visibility = ["//visibility:public"],
)

js_library(
	name = "jest_config",
	deps = [
		":jest_env",
	],
	srcs = ["jest.config.mjs"],
	visibility = ["//visibility:public"],
)
