load("//tooling/js:defs.bzl", "ts_library", "ts_test", "ts_workspace")

ts_library(
    name = "library",
    srcs = [
        "index.ts",
    ],
    deps = [
        ":node_modules/@org/add-one",
    ],
)

ts_test(
    name = "test",
    embed = [":library"],
    test = "index.test.ts",
)

ts_workspace(
    srcs = [":library"],
    visibility = ["//visibility:public"],
)
