load("//tooling/js:defs.bzl", "ts_library", "ts_test")

ts_library(
    name = "library",
    srcs = [
        "index.ts",
    ],
)

ts_library(
    name = "library_cjs",
    srcs = [
        "index.ts",
    ],
    esm = False,
)

ts_test(
    name = "test",
    config = "jest.config.mjs",
    test = "index.test.ts",
    deps = [
        ":library",
        ":library_cjs",
    ],
)
